# Pi-Pico-FatFs-Spi-SD

./: LICENSE.txt  README.md
FatFs_SPI/: CMakeLists.txt
FatFs_SPI/ff16/source/: ffconf.h
src/: CMakeLists.txt  debug_led_status.c  dir.c  hw_config.c  main.c  main_simple.c  my_diskio.c  my_sdcard.c  py_dir_orig.c  py_read_write_orig.c  read_write.c  sdcard_old.c
src/include/: debug_led_status.h  dir.h  hw_config.h  my_diskio.h  my_ffconf.h  my_sdcard.h  read_write.h
